syntax = "proto3";

service Similarities {
    rpc get_result(SimilaritiesRequest) returns (SimilaritiesResponse) {};
}

message SimilaritiesRequest {
    string path = 1;
    float percent = 2;
    string desired_path = 3;
}

message SimilaritiesResponse {
    bool return_value = 1;
}